Fixes image height on smaller screens

--- a/lightbox/style.css
+++ b/lightbox/style.css
@@ -140,4 +140,8 @@ body {
   .next {
     order: 3;
   }
+
+  .full-image {
+    height: 320px;
+  }
 }
